@@ -35,4 +35,5 @@ public class Constants {
     static final String LOGTESTLISTENEREVENTS = "logtestlistenerevents=";
     static final String TESTSFILE = "testsfile=";
     static final String TERMINATED_SUCCESSFULLY = "terminated successfully";
+    static final String LOG_FAILED_TESTS="logfailedtests=";
 }
